Исправил оштбки путей в reviews.html

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -75,37 +75,37 @@
           <picture class="reviews-card-picture">
             <source
               srcset="
-                ./images/reviews/./images/reviews/reviews-tablet-2.webp    1x,
-                ./images/reviews/./images/reviews/reviews-tablet-2@2x.webp 2x
+                ./images/reviews/reviews-tablet-2.webp    1x,
+                ./images/reviews/reviews-tablet-2@2x.webp 2x
               "
               media="(min-width: 768px)"
               type="image/webp"
             />
             <source
               srcset="
-                ./images/reviews/./images/reviews/reviews-tablet-2.jpg    1x,
-                ./images/reviews/./images/reviews/reviews-tablet-2@2x.jpg 2x
+                ./images/reviews/reviews-tablet-2.jpg    1x,
+                ./images/reviews/reviews-tablet-2@2x.jpg 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                ./images/reviews/./images/reviews/reviews-mobile-2.webp    1x,
-                ./images/reviews/./images/reviews/reviews-mobile-2@2x.webp 2x
+                ./images/reviews/reviews-mobile-2.webp    1x,
+                ./images/reviews/reviews-mobile-2@2x.webp 2x
               "
               media="(min-width: 320px)"
               type="image/webp"
             />
             <source
               srcset="
-                ./images/reviews/./images/reviews/reviews-mobile-2.jpg    1x,
-                ./images/reviews/./images/reviews/reviews-mobile-2@2x.jpg 2x
+                ./images/reviews/reviews-mobile-2.jpg    1x,
+                ./images/reviews/reviews-mobile-2@2x.jpg 2x
               "
               media="(min-width: 320px)"
             />
             <img
               class="reviews-card-img"
-              src="./images/reviews/./images/reviews/reviews-mobile-2.jpg"
+              src="./images/reviews/reviews-mobile-2.jpg"
               alt="первая студентка"
             />
           </picture>
