add stile for 768px and 1200px

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -9,27 +9,28 @@
                     <use href="./images/sprite.svg#icon-reviews-vk" width="20" height="20"></use>
                 </svg>
             </div>
-            <div class="feedback-righr-part"></div>
-            <h3 class="feedback-username">Тоня Кучеровская</h3>
-            <ul>
-                <li>
-                    <p class="feedback-text-light">Выпуск 2015-го года, Національний університет біоресурсів
-                        і природокористування України</p>
-                </li>
-                <li>
-                    <p class="feedback-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
-                        зовсім пустий словниковий
-                        запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали
-                        друзями, тому
-                        що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла
-                        на
-                        уроках, маючи страх
-                        зробити найменшу помилку. Зараз я можу похизуватись тим, що я студент...<br>
-                        <span class="feedback-text-orange">Читать дальше</span>
-                    </p>
-                </li>
+            <div class="feedback-righr-part">
+                <h3 class="feedback-username">Тоня Кучеровская</h3>
+                <ul>
+                    <li>
+                        <p class="feedback-text-light">Выпуск 2015-го года, Національний університет біоресурсів
+                            і природокористування України</p>
+                    </li>
+                    <li>
+                        <p class="feedback-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій
+                            зовсім пустий словниковий
+                            запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали
+                            друзями, тому
+                            що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла
+                            на
+                            уроках, маючи страх
+                            зробити найменшу помилку. Зараз я можу похизуватись тим, що я студент...<br>
+                            <span class="feedback-text-orange">Читать дальше</span>
+                        </p>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </div>
 
         <div class="feedback-gallery">
