--- a/src/sass/_guarenty.scss
+++ b/src/sass/_guarenty.scss
@@ -7,7 +7,7 @@
     margin-bottom: 30px;
   }
   &-list {
-    padding: 30px 20px 31px 20px;
+    padding: 30px 20px;
     width: 320px;
     margin: auto;
   }
@@ -26,10 +26,24 @@
 .section.warranty-corect {
   padding-bottom: 0;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .warranty-corect .container {
     padding: 0;
     margin: 0;
     max-width: 100%;
   }
+}
+@media screen and (min-width: 768px) {
+  .warranty {
+    &-list {
+      width: 688px;
+      pad: 30px 50px 30px 79px;
+      margin: 0;
+    }
+    &-item:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
 }
