--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -65,21 +65,37 @@
   &-gallery-icon {
     width: 54px;
   }
-  &-gallery-item {
+}
+.hide-pic {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .feedback-gallery-item {
     &:not(:nth-child(3n)) {
       margin-right: 10px;
     }
   }
 }
-.hide-pic {
-  display: none;
-}
-
 @media screen and (min-width: 768px) {
   br {
     display: none;
   }
   .hide-pic {
     display: block;
+  }
+  .feedback {
+    &.section {
+      padding: 50px 20px;
+    }
+    &-content {
+      display: flex;
+    }
+    &-righr-part {
+      width: 412px;
+    }
+    &-text {
+      display: flex;
+      text-align: start;
+    }
   }
 }
