--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -191,7 +191,7 @@ a {
   margin-bottom: 30px;
 }
 .warranty-list {
-  padding: 30px 20px 31px 20px;
+  padding: 30px 20px;
   width: 320px;
   margin: auto;
 }
@@ -214,11 +214,21 @@ a {
   padding-bottom: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .warranty-corect .container {
     padding: 0;
     margin: 0;
     max-width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .warranty-list {
+    width: 688px;
+    pad: 30px 50px 30px 79px;
+    margin: 0;
+  }
+  .warranty-item:not(:last-child) {
+    margin-bottom: 20px;
   }
 }
 .feedback.section {
@@ -318,14 +328,16 @@ a {
 .feedback-gallery-icon {
   width: 54px;
 }
-.feedback-gallery-item:not(:nth-child(3n)) {
-  margin-right: 10px;
-}
 
 .hide-pic {
   display: none;
 }
 
+@media screen and (max-width: 767px) {
+  .feedback-gallery-item:not(:nth-child(3n)) {
+    margin-right: 10px;
+  }
+}
 @media screen and (min-width: 768px) {
   br {
     display: none;
@@ -333,6 +345,24 @@ a {
 
   .hide-pic {
     display: block;
+  }
+
+  .feedback.section {
+    padding: 50px 20px;
+  }
+  .feedback-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .feedback-righr-part {
+    width: 412px;
+  }
+  .feedback-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: start;
   }
 }
 .request-form {
