--- a/src/sass/_doings.scss
+++ b/src/sass/_doings.scss
@@ -9,7 +9,7 @@
     .doings-title{
     padding-bottom: 30px;
     
-    @include font (800, 20px, 2.6, 0.03em);
+    @include font (800, 20px, 1.3, 0.03em);
     }
     
     .doings-item{
@@ -23,21 +23,21 @@
     }
     
     .doings-list-title{
-        padding-bottom: 32px;
+        position: relative;
+        padding-bottom: 42px;
         text-align: center;
         @include font (700, 14px, 1.428, 0.08em);
     }
     .doings-list-title::after{
         content: "";
-        display: inline-block;
         position: absolute;
-        width: 100%;
-        height: 4px;
-        border-radius: 2px;
-        bottom: 0;
-        right: 0;
-        color: green;
-      }
+        width: 20px;
+        height: 2px;
+        bottom: 21px;
+        left: 130px;
+        background-color: var(--b-accent-background);
+
+    }
     
     .doings-description{
         padding-bottom: 22px;
@@ -50,5 +50,5 @@
     .doings-svg{
         margin-top: 30px;
         margin-bottom: 20px;
-        fill: lightseagreen;
+        fill: var(--light);
     }    
