доробила всі стилі

--- a/src/sass/layout/_program-section.scss
+++ b/src/sass/layout/_program-section.scss
@@ -1,6 +1,4 @@
-// *{
-//     outline: solid 1px red;
-// }
+
 .program-section{
     background-color: #111518;
     padding-top: 50px;
@@ -36,11 +34,8 @@
     text-transform: uppercase;
     color: var(--primary-white-color);
     
-    // margin-bottom: 5px;
-
     position: relative;
 }
-
 
 
 .method-list-text{
@@ -57,7 +52,6 @@
 }
 
 
-
 .topic-list-item{
     font-family: Montserrat;
     font-weight: 500;
@@ -71,19 +65,20 @@
 
 .program-list{
     margin-left: 120px;
-}
-.program-list::before{
-    content: " ";
-    // display: inline-block;
-    height: 1292px;
-    width: 1px;
-    background:  #FFFFFF ;
-    position: absolute;
-    margin-right: 20px;
 
-    top: 130px;
-    left: 88px;
+    &::before{
+        content: " ";
+        height: 1292px;
+        width: 1px;
+        background:  #FFFFFF ;
+        position: absolute;
+        margin-right: 20px;
+    
+        top: 130px;
+        left: 88px;
+    }
 }
+
 
 .section-program-picture{
     position: absolute;
@@ -124,6 +119,8 @@
 
 .choose-section{
    position: absolute;
+
+   
 }
 
 .choose-wrapper{
@@ -148,8 +145,10 @@
      }
 
     .choose-section{
-        margin-top: 50px;
-       top: 1522px;
+       top: 1563px;
+
+       left:50%; 
+       margin-left:-140px;
     
     }
 
@@ -182,12 +181,9 @@
         margin-top: 8px;
     }
     
-
-
-   
-
 }
-//------------------------------------768------------------
+
+//------------------------------------768-------------------------------------------
 @media screen and (min-width: 768px){
     .program-section{
         padding-top: 60px;
@@ -199,11 +195,6 @@
         line-height: 1.3;
     }
 
-    // .title-wrapper{
-    //     width: 688px;
-    //     margin-left: auto;
-    //     margin-right: auto;
-    // }
 
     .program-section .title{
         margin-bottom: 52px;
@@ -216,35 +207,24 @@
         text-align: center;
     }
 
-    // .choose-section .container{
-    //     padding-right: ;
-    //     // padding-left: 0;
-    // }
-
     .program-list{
         margin-left: 119px;
+
+       &::before{
+            content: " ";
+            // display: inline-block;
+            height: 705px;
+            width: 1px;
+            background:  #FFFFFF ;
+            position: absolute;
+            margin-right: 20px;
+        
+            top: 157px;
+            left: 88px;
+        }
     }
 
-    
-
-//------------------ Вирівнюю по вертикалі
-    
-    //--------------------------------
-
-    .program-list::before{
-        content: " ";
-        // display: inline-block;
-        height: 717px;
-        width: 1px;
-        background:  #FFFFFF ;
-        position: absolute;
-        margin-right: 20px;
-    
-        top: 155px;
-        left: 88px;
-    }
-
-
+  
      .choose-wrapper{
         width: 688px;
         padding-top: 30px;
@@ -258,26 +238,24 @@
         flex-wrap: wrap;
     }
    
-
-    
-
     .choose-section{
-        margin-top: 50px;
        position: absolute;
-       top: 1116px;
+       top: 1152px;
+
+       left:50%; 
+       margin-left:-344px;
     
     }
 
     .section-program-picture{
         right: 0;
-        top: 836px;
-    
-        
+        top: 822px;
+      
     }
     
 
 }
-//-----------------------------------------------
+//-------------------------------------------------------------------
 @media screen and (min-width: 768px) and (max-width: 1343px){
     .method-list{
         display: flex;
@@ -295,7 +273,7 @@
         width: 176px;
 
         &:not(:last-child){
-            margin-bottom: 3px;
+            margin-bottom: 1px;
         }
     }
 
@@ -324,7 +302,7 @@
     }
 }
 
-//-------------------------1344-------------------------
+//--------------------------------------------1344-------------------------
 
 
 @media screen and (min-width: 1344px){
@@ -374,10 +352,7 @@
     .topic-list-item{
         font-size: 18px;
        line-height: 1.56;
-
-       &:not(:last-child){
-           margin-bottom: 8px;
-       }
+       margin-bottom: 0;
     }
 
     .choose-wrapper{
@@ -387,8 +362,6 @@
         padding-left: 84px;
         padding-right: 82px;
 
-        margin-left: 183px;
-        margin-right: 183px;
     } 
      
     .choose-list{
@@ -397,11 +370,13 @@
     }
 
     .choose-section{
-        margin-top: 164px;
        position: absolute;
-       top: 934px;
+       top: 1070px;
 
        z-index: 10;
+       left:50%; 
+       margin-left:-657px;
+        
     }
 
     .choose-list-item{
@@ -448,14 +423,12 @@
         border-radius: 50%;
         background:  var(--accent-color);
         position: absolute;
-        // left: 82px;
-        // margin-top: 8px;
         top: 269px;
     }
 
     .section-program-picture{
         left: 0;
-        top: 724px;
+        top: 684px;
     }
 
     
@@ -465,7 +438,7 @@
 
 
 
-// ---------------- Секция почему нас выбирают-----------------
+
 
 
 
