Add reused class

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -39,3 +39,22 @@ textarea {
 body.modal-open {
   overflow: hidden;
 }
+
+h2 {
+  font-family: 'Titan One';
+  font-size: 30px;
+  line-height: 1.13;
+  text-align: center;
+  text-transform: uppercase;
+  color: $dark-pink-color;
+}
+
+h3 {
+  font-size: 58px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  color: $main-red-color;
+}
