--- a/src/sass/components/reviews/_reviews-bg-photo.scss
+++ b/src/sass/components/reviews/_reviews-bg-photo.scss
@@ -1,6 +1,9 @@
 .reviews-bg-photo {
-  width: $mobile;
+  padding: 0;
+  max-width: 320px;
   height: 122px;
-  background-color: $main-black-color;
+  background-color: $main-white-color;
   background-image: url('../images/reviews-bg-photo/reviews-bg-photo-mobile.jpg');
+  background-position: center;
+  background-size: cover;
 }
