десктоп оверлей позиционирование текста

--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -77,16 +77,64 @@
     }
 
     & .features-item {
-      width: 220px;
-      width: calc((100% / 2) - 20px);
+      width: calc((100% / 2) - 25px);
     }
 
-    & .features-item:nth-child(-n + 4) {
-      margin-bottom: 20px;
+    & .features-text {
+      font-style: normal;
+      font-weight: 700;
+      margin-top: 8px;
+    }
+  }
+}
+
+@media screen and (max-width: 1313px) {
+  .features-overlay .features-item:nth-child(-n + 4) {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1314px) {
+  .problems {
+    padding: 100px 0 282px;
+
+    .problems-title {
+      font-family: $font;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 46px;
+      line-height: 130%;
+      letter-spacing: 0.03em;
+      color: $white-font;
+    }
+  }
+  .features-overlay {
+    max-width: 1314px;
+    padding: 70px 112px 62px 114px;
+
+    & .features-list {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0;
+    }
+
+    & .features-item {
+      max-width: 335px;
+      width: calc((1120px / 3) - 40px);
+    }
+
+    & .features-item:nth-child(-n + 3) {
+      margin-bottom: 30px;
     }
     & .features-text {
       font-style: normal;
       font-weight: 700;
+      font-size: 20px;
+      line-height: 1.2;
+    }
+    & .features-number {
+      font-size: 20px;
+      line-height: 1.65;
     }
   }
 }
