--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -42,19 +42,40 @@ body.modal-open {
 
 h2 {
   font-family: 'Titan One';
-  font-size: 30px;
-  line-height: 1.13;
+  font-size: 18px;
+  line-height: 1.17;
   text-align: center;
   text-transform: uppercase;
   color: $dark-pink-color;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
 }
 
 h3 {
-  font-size: 58px;
-  line-height: 1.14;
+  font-size: 34px;
+  line-height: 1.15;
+
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
   color: $main-red-color;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 48px;
+    line-height: 55px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 58px;
+    line-height: 1.14;
+  }
 }
