--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -19,11 +19,13 @@
     background-color: var(--primary-white-color);
     @media screen and (min-width:768px) {
     max-width: 688px; 
-    height: 303px;    
+    height: 303px;
+    padding: 30px 46px 26px 96px;    
     }
     @media screen and (min-width:1344px){
     max-width: 1314px;
     height: 362px;
+    padding: 70px 112px 62px 114px;
     }
 }
 .problems-title {
@@ -74,18 +76,38 @@
     color: var(--title-text-color);    
 }
 .problems-item {
-    @media screen and (min-width:319px) and (max-width:767px){
-    &:not(:last-child) {        
-        margin-bottom: 10px;}
+@media screen and (min-width:319px) and (max-width:767px){
+&:not(:last-child) {        
+margin-bottom: 10px;}
+}
+@media screen and (min-width:768px) and (max-width:1343px) {
+&:nth-child(2n+1) {
+padding-right: 22px
+}
+&:nth-child(-n+4){
+padding-bottom: 24px;}
+}
+@media screen and (min-width:1344px){
+// &:nth-child(-n+3) {
+// padding-bottom: 32px;}
 }}
 .problems-list {
     @media screen and (min-width:768px) {
         flex-wrap: wrap;
         display: flex;}
+        
+    @media screen and (min-width:1344px) {
+    margin: -15px;
+    justify-content: space-between;}
 }
 .problems-item {
     @media screen and (min-width:768px) {
     flex: 1 0 50%}
     @media screen and (min-width:1344px){
-        flex: 1 0 33%
-    }}
+        // flex: 1 0 33%
+        max-width: 336px;
+        &:nth-child(-n+4){
+            margin-bottom: 32px;}
+            }
+
+    }
