--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,7 @@
-<header>header</header>
+<header>
+    <div class="container header">
+        <a href="../index.html">
+        <img src="" alt="" class="logo"></a>
+        
+    </div>
+</header>
