--- a/src/partials/program-section.html
+++ b/src/partials/program-section.html
@@ -118,12 +118,27 @@
              <source 
             srcset="./images/program-section/pic-tel@1x.jpg 1x, ./images/program-section/pic-tel@2x.jpg 2x"
             media="(max-width: 767px)" />
+
+            <source 
+            srcset="./images/program-section/pic-tel@1x.webp 1x, ./images/program-section/pic-tel@2x.webp 2x"
+            media="(max-width: 767px)" type="image/webp" />
+
             <source 
             srcset="./images/program-section/pic-desk@1x.jpg 1x, ./images/program-section/pic-desk@2x.jpg 2x"
             media="(min-width: 1344px)" />
+
+            <source 
+            srcset="./images/program-section/pic-desk@1x.webp 1x, ./images/program-section/pic-desk@2x.webp 2x"
+            media="(min-width: 1344px)" type="image/webp" />
+
             <source 
             srcset="./images/program-section/pic-tab@1x.jpg 1x, ./images/program-section/pic-tab@2x.jpg 2x"
             media="(min-width: 768px)" />  
+
+            <source 
+            srcset="./images/program-section/pic-tab@1x.webp 1x, ./images/program-section/pic-tab@2x.webp 2x"
+            media="(min-width: 768px)" type="image/webp" />  
+
           <img class="section-program-img" src="./images/program-section/pic-tel@1x.jpg" alt="учетильница занимаеться с сотрудниками" >
          </picture> 
    
