add desktop header version

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,6 +15,20 @@
           <span class="header-logo-describe-accent">Адский</span> английский
         </p>
       </a>
+      <ul class="header-list-menu">
+        <li class="header-list-item-menu">
+          <a class="header-list-link-menu" href="#">Программы обучения</a>
+        </li>
+        <li class="header-list-item-menu">
+          <a class="header-list-link-menu" href="#">О нас</a>
+        </li>
+        <li class="header-list-item-menu">
+          <a class="header-list-link-menu" href="#">Варианты обучения</a>
+        </li>
+        <li class="header-list-item-menu">
+          <a class="header-list-link-menu" href="#">Контакты</a>
+        </li>
+      </ul>
       <button class="header-consultation-btn-tablet" type="button">
         Консультация по телефону
       </button>
