--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -3,6 +3,9 @@ $primary-text-color: #ffffff;
 $title-color: #ffa5ba;
 $address-color: #000000;
 $contacts-color: #907e82;
+$background-color: #ffb8ca;
+$coffee-color: #f0d1a5;
+$milkshakes-color: #c2e297;
 
 $title-font: Titan One, sans-serif;
 $primary-font: DM Sans, sans-serif;
