--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,6 @@
 
 @import './layout/section';
 @import './layout/container';
+@import './layout/reviews';
 
 @import './components/body';
-@import './components/reviews';
