--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,21 +2,21 @@
   <div class="container-reviews">
     <h2 class="reviews-title">Отзывы выпускников</h2>
   
-<!-- Слайдер 1 -->
+<!-- Слайдер -->
     <div class="slider">  
       <div class="slider-item">
         <button class="button left" type="button">
           <svg  class="icon-arrow">
            <use href="./images/sprite.svg#Arrow-right"></use>
          </svg>
-         <!-- <img src="./images/Arrow-right.svg" alt="Правая кнопка переключения"> -->
+       
         </button>
         <button class="button right" type="button">
          <svg  class="icon-arrow">
            <use  href="./images/sprite.svg#Arrow-left"></use>
          </svg>
-         <!-- <img src="./images/Arrow-left.svg" alt="Левая кнопка переключения"> -->
         </button> 
+        
         <div class="slider-photo">
           <picture>
             <source srcset="./images/Reviews/photo6.webp 1x , ./images/Reviews/photo6@2x.webp 2x" type="image/webp" />
@@ -43,7 +43,8 @@
         </div>
       </div>
     </div>
-    <!-- <div class="container-icon"> -->
+
+    <!-- Список икнок tablet, desktop -->
       <ul class="reviews-phone list">
         <li class="item">
           <a class="link" href="">
@@ -115,7 +116,7 @@
         </li>
       </ul>
 
-      
+      <!-- Список иконок phone -->
       <ul class="reviews list">
         <li class="item">
           <a class="link" href="">
@@ -145,8 +146,6 @@
             </picture>
           </a>
         </li>
-
       </ul>
-    <!-- </div> -->
   </div>  
 </section>
