--- a/src/sass/components/_teacher.scss
+++ b/src/sass/components/_teacher.scss
@@ -37,7 +37,7 @@
 
     &::before {
       content: '';
-      display: inline-block;
+      display: inline-table;
       width: 16px;
       height: 14px;
       margin-right: 10px;
@@ -61,7 +61,8 @@
       display: block;
       width: 26px;
       height: 14px;
-      margin-top: 10px;
+      margin-top: 21px;
+      margin-bottom: 8px;
       background-repeat: no-repeat;
       background-image: url('../images/icons/line.svg');
     }
@@ -75,8 +76,9 @@
     font-style: normal;
     font-weight: 500;
     color: #ff6b09;
+    text-decoration-line: underline;
     padding-top: 10px;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
     @media screen and (max-width: 1343px) {
       font-size: 12px;
       line-height: 1.66;
