--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,10 +5,10 @@
 @import './components/button';
 @import './components/title';
 // layout
-
-@import './layout/footer';
-@import './layout/header';
-@import './layout/hero';
+@import './layout/garant';
+// @import './layout/footer';
+// @import './layout/header';
+// @import './layout/hero';
 @import './layout/how-we-do-it';
 
 // utils
