--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,13 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
@@ -22,4 +32,8 @@ ul,
 ol {
   padding: 0;
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
