delete container from base style and added in mixins

--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -1,6 +1,6 @@
-@mixin card($width, $background, $padding, $shadow: none) {
+@mixin card($background, $padding, $shadow: none) {
   border-radius: 24px;
-  width: $width;
+  // width: $width;
   box-shadow: $shadow;
   padding: $padding;
 }
@@ -12,4 +12,15 @@
   padding: $padding;
 
   background: $color-red;
+}
+
+@mixin container($padding-left, $padding-right) {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: $padding-left;
+  padding-right: $padding-right;
+
+  // outline: 1px solid tomato;
 }
