--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -45,16 +45,16 @@ h6 {
   overflow: hidden;
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-left: 115px;
-  padding-right: 115px;
+// .container {
+//   margin-left: auto;
+//   margin-right: auto;
+//   padding-top: 0;
+//   padding-bottom: 0;
+//   padding-left: 115px;
+//   padding-right: 115px;
 
-  // outline: 1px solid tomato;
-}
+//   // outline: 1px solid tomato;
+// }
 
 // .hero {
 //   background-color: $color-pink-dark;
