--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -116,6 +116,7 @@
       display: flex;
       flex-wrap: wrap;
       padding: 0;
+      justify-content: space-between;
     }
 
     & .features-item {
