--- a/src/partials/choose.html
+++ b/src/partials/choose.html
@@ -1,6 +1,4 @@
-<section class="back"></section>
-
-<section class="choose">
+<section class="choose" id="choose">
     <h2 class="choose-title">Почему нас выбирают</h2>
     <ol class="choose-list">
         <li class="choose-list-item">
