--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -1,8 +1,3 @@
-.back {
-  background-color: #ff6b09;
-  height: 1700px;
-}
-
 .choose {
   position: absolute;
   top: 1645px;
@@ -10,22 +5,14 @@
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 30px;
-  padding-right: 30px;
+  padding-right: 34px;
   background: #ffffff;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-}
-
-.choose-list-text {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.428;
 }
 
 .choose-title {
   /* помістити вище секції на 30px */
   position: absolute;
-  left: 0;
   bottom: 100%;
   padding-bottom: 30px;
   margin: 0px;
@@ -39,11 +26,11 @@
 
 .choose-list-subtitle {
   color: #ff6b09;
-  padding-bottom: 10px;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 164.9%;
+  margin-bottom: 10px;
+}
+
+.choose-list-text {
+  line-height: 20px;
 }
 
 .choose-list-item {
@@ -52,6 +39,13 @@
   width: 216px;
   left: 50px;
   top: 5328px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.428;
+  letter-spacing: 0.08em;
 
   &:last-child {
     margin-bottom: 0px;
@@ -96,9 +90,12 @@
     left: 0;
     padding: 0;
     padding-top: 70px;
-    padding-bottom: 70px;
+    padding-bottom: 62px;
     padding-left: 84px;
     padding-right: 82px;
+    // margin-left: 0;
+    // margin-right: 0;
+    // width: 1314;
   }
 
   .choose-list {
@@ -109,16 +106,25 @@
   }
 
   .choose-list-item {
-    padding-bottom: 0;
-    padding-top: 0px;
     width: 356px;
+    margin-bottom: 0;
+    margin-left: 40px;
 
     &:nth-child(n + 4) {
       margin-top: 32px;
+    }
+
+    &:nth-child(3n + 1) {
+      margin-left: 0;
     }
   }
 
   .choose-title {
     display: none;
+  }
+
+  .choose-list-text {
+    font-size: 20px;
+    line-height: 28px;
   }
 }
