добавляет стили десктопа

--- a/src/sass/layouts/_program.scss
+++ b/src/sass/layouts/_program.scss
@@ -14,13 +14,14 @@
     background-size: 384px 240px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1314px) {
     padding-top: 120px;
   }
 }
 
-@media screen and (max-width: 1199px) {
-  .program-list-wrapper {
+.program-list-wrapper {
+  @media screen and (max-width: 767px) {
+    position: relative;
     width: 180px;
     margin: 0 auto;
     padding-left: 29px;
@@ -31,20 +32,28 @@
       width: 1px;
       height: 1293px;
       position: absolute;
-      top: 133px;
+      top: 14px;
+      left: 19px;
     }
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1313px) {
+  .program-list-wrapper {
+    position: relative;
+    width: 614px;
+    margin: 0 auto;
+    padding-left: 50px;
+  }
+
   .program-list-wrapper::before {
     content: '';
     background-color: rgba(255, 255, 255, 0.5);
     width: 1px;
-    height: 749px;
+    height: 726px;
     position: absolute;
-    top: 157px;
-    left: 131px;
+    top: 16px;
+    left: 23px;
   }
 
   .program-item + .program-item {
@@ -52,22 +61,29 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1314px) {
   .program-list-wrapper {
-    width: initial;
-    padding-left: 98px;
+    display: flex;
   }
 }
 
-// .program-subtitle::before {
-//   content: '';
-//   background-image: url('../images/program/ellipse-6.svg');
-//   width: 12px;
-//   height: 12px;
-//   position: absolute;
-//   top: 127px;
-//   left: 95px;
-// }
+.program-item {
+  position: relative;
+}
+
+.program-subtitle::before {
+  content: '';
+  background-image: url('../images/program/ellipse-6.svg');
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 9px;
+  left: -35px;
+
+  @media screen and (min-width: 768px) and (max-width: 1313px) {
+    left: -52px;
+  }
+}
 
 .program-title {
   margin-bottom: 43px;
@@ -81,7 +97,7 @@
     margin-bottom: 52px;
     text-align: start;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1314px) {
     font-size: 46px;
   }
 }
@@ -94,7 +110,7 @@
     margin-bottom: 50px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1313px) {
     display: flex;
   }
 }
@@ -119,12 +135,11 @@
 
   @media screen and (min-width: 768px) {
     width: 176px;
-    // margin-right: 50px;
     margin-bottom: 0;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1313px) {
   .program-subtitle-list:nth-child(even) {
     margin-right: 50px;
   }
@@ -149,7 +164,7 @@
   bottom: -152px;
   left: 18px;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) and (max-width: 1313px) {
     bottom: -192px;
   }
 }
@@ -192,3 +207,21 @@
 
   color: $dark-font;
 }
+
+// @media screen and (min-width: 767px) {
+//   .features-overlay {
+//     min-width: 688px;
+//     height: 303px;
+//     padding: 30px 90px 26px;
+//   }
+//   .features-overlay .features-list {
+//     display: flex;
+//     flex-wrap: wrap;
+//   }
+//   .features-overlay .features-item {
+//     width: 250px;
+//   }
+//   .features-list-item:nth-child(even) {
+//     margin-left: 20px;
+//   }
+// }
