для планшета добавил justify- contant space-between на overlay list

--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -74,6 +74,7 @@
       display: flex;
       flex-wrap: wrap;
       padding: 0;
+      justify-content: space-between;
     }
 
     & .features-item {
