--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -120,6 +120,9 @@ img {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     padding: 0;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .features-overlay .features-item {
     width: calc((100% / 2) - 25px);
