--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -55,10 +55,12 @@
 }
 
 .comments .comments-list__main-foto {
+  outline: 1px solid green;
   display: block;
   text-align: center;
+  padding-bottom: -5px;
 }
-.comments-list-item__name {
+.comments-list__name {
   font-style: normal;
   font-weight: 800;
   font-size: 14px;
@@ -66,4 +68,23 @@
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--orange-color);
+}
+.comments-list .comments-list__info {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.25;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--grey-color);
+}
+.comments-list .comments-list__icon {
+  display: block;
+  text-align: center;
+}
+
+.comments-list .comments-list-icon__vk {
+  width: 30px;
+  height: 30px;
+  margin-top: 10px;
 }
