--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -54,12 +54,22 @@
                                     <li class="comments-list__main-foto">
                                         <img src="./images/comments/tonya_kucherovskaya.png" width="90" height="90" alt="фото Тоня Кучерявская">
                                     </li>
-                                    <li class="comments-list__item">
-                                        <h3 class="comments-list-item__name">Тоня Кучеровская</h3>
+
+                                    <li class="comments-list__icon">
+                                        <svg class="comments-list-icon__vk">
+                                            <use href="./images/sprite.svg#icon-vk"></use>
+                                        </svg>
                                     </li>
+
                                     <li class="comments-list__item">
-                                        <h3>dfs</h3>
+                                        <h3 class="comments-list__name">Тоня Кучеровская</h3>
+                                        <p class="comments-list__info">
+                                            Выпуск 2015-го года, Національний університет біоресурсів
+                                            і природокористування України
+                                        </p>
+                                        
                                     </li>
+                                    
                                     <li class="comments-list__item">
                                         <h3>dfs</h3>
                                     </li>
