Добавлено svg огня на секции general-problem

--- a/src/partials/general-problem.html
+++ b/src/partials/general-problem.html
@@ -1,5 +1,9 @@
 <section class="general-problem container">
-  <div></div>
+  <div>
+    <svg>
+      <use href="/images/general-problem/fire.svg"></use>
+    </svg>
+  </div>
   <h2>Главные проблемы учеников
     на English ВНО, которые
     мы <span>помогаем</span> решить
