--- a/src/sass/layouts/_guarantee.scss
+++ b/src/sass/layouts/_guarantee.scss
@@ -71,15 +71,21 @@ border-left: 1px dashed $light-font;
     content: "";
     width: 15px;
     height: 20px;
-    background-color: $orange;
-    
     top: 0px;
-    left:-8px;
-    // background-image: url("./../images/icon/sprite.svg#fire");
- 
-    // background-repeat: no-repeat;
-    // background-position: 50%;
-    // background-size: cover;
+    left:-7px;
+  
+    background-image: url("./../images/guarantee/mob_fire.svg");
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;
+
+    @media screen and (min-width: 1314px){
+    top: -1px;
+    left: -10px;
+
+    width: 22px;
+    height: 30px;
+    }
 }
 
 @media screen and (min-width: 768px){
@@ -90,11 +96,6 @@ border-left: 1px dashed $light-font;
 @media screen and (min-width: 1314px){
   padding-left: 41px;
   padding-bottom: 20px;
-}
 
-// .guarantee-list {
-//   @media screen and (min-width: 1314px){
-//   text-align: center;
-// }
-// }
+ }
 }
