review добавляет стили для desktop

--- a/src/sass/layouts/_reviews.scss
+++ b/src/sass/layouts/_reviews.scss
@@ -2,6 +2,10 @@
   padding-top: 50px;
   padding-bottom: 50px;
   position: relative;
+
+  @media screen and (min-width: 1314px) {
+    padding: 130px 112px;
+  }
 }
 
 .review__section {
@@ -32,6 +36,15 @@
   &--right {
     right: 28px;
   }
+  @media screen and (min-width: 1314px) {
+    bottom: 409px;
+  }
+  &--left {
+    left: 28px;
+  }
+  &--right {
+    right: 28px;
+  }
 }
 
 .review__title {
@@ -43,6 +56,10 @@
     font-size: 26px;
     margin-bottom: 30px;
   }
+
+  @media screen and (min-width: 1314px) {
+    font-size: 46px;
+  }
 }
 
 .review__card {
@@ -53,21 +70,29 @@
     display: flex;
     justify-content: space-between;
     padding: 40px;
-    margin: 0 auto 30px;
+    margin-bottom: 30px;
     width: 100%;
+  }
+  @media screen and (min-width: 1314px) {
+    padding: 50px 112px 50px 82px;
+    margin-bottom: 40px;
   }
 }
 
 .review__card-info--right {
   @media screen and (min-width: 768px) {
-    width: 412px;
+    margin-left: 46px;
     text-align: start;
+  }
+
+  @media screen and (min-width: 1314px) {
+    margin-left: 40px;
   }
 }
 
 .reviw__student-picture {
   margin: 0 auto 20px;
-  width: 150px;
+  min-width: 150px;
 }
 
 .review__student-contact {
@@ -81,9 +106,14 @@
   color: $orange;
   margin-bottom: 10px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1313px) {
     font-size: 20px;
     margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1314px) {
+    font-size: 30px;
+    line-height: 1.23;
   }
 }
 
@@ -96,11 +126,20 @@
   @media screen and (min-width: 768px) {
     margin: 0 0 20px;
   }
+  @media screen and (min-width: 1314px) {
+    padding-right: 268px;
+    font-size: 14px;
+    line-height: 1.21;
+  }
 }
 
 .review__student-comment {
   @include font($font, normal, 500, 12px, 1.67);
   color: $sec-light-font;
+  @media screen and (min-width: 1314px) {
+    font-size: 18px;
+    line-height: 1.6;
+  }
 }
 
 .review__comment-more {
